--- a/projects/ngx-command-palette/package.json
+++ b/projects/ngx-command-palette/package.json
@@ -1,6 +1,26 @@
 {
   "name": "ngx-command-palette",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pawel-wasiak/ngx-command-palette"
+  },
+  "keywords": [
+    "command palette",
+    "search",
+    "quick search",
+    "find",
+    "finder",
+    "navigator",
+    "navigate",
+    "angular"
+  ],
+  "author": "Paweł Wasiak",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pawel-wasiak/ngx-command-palette/issues"
+  },
+  "homepage": "https://github.com/pawel-wasiak/ngx-command-palette#readme",
   "peerDependencies": {
     "@angular/common": "^13.1.0",
     "@angular/core": "^13.1.0"
