--- a/projects/ngx-command-palette/package.json
+++ b/projects/ngx-command-palette/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/pawel-wasiak/ngx-command-palette#readme",
   "peerDependencies": {
     "@angular/common": "^13.1.0",
-    "@angular/core": "^13.1.0"
+    "@angular/core": "^13.1.0",
+    "fuse.js": "^6.5.3"
   },
   "dependencies": {
     "tslib": "^2.3.0"
